repaired footer rendering icons off-center

--- a/professional-portfolio/src/components/styles/Footer.css
+++ b/professional-portfolio/src/components/styles/Footer.css
@@ -1,12 +1,11 @@
 @import "../../utils/colors.css";
 
 .footer {
-  z-index: 1;
   display: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 10vh;
+  height: fit-content;
   margin-top: 10vh;
 }
 .footerIconDiv {
@@ -15,11 +14,10 @@
   justify-content: center;
   align-items: center;
   max-width: 100vw;
-  height: 8vh;
+  height: fit-content;
 }
-.footerIconDiv a {
-  z-index: 1;
-  width: 20vw;
+.iconAnchor {
+  display: flex;
 }
 
 .footer-icon {
