--- a/professional-portfolio/src/components/styles/Header.css
+++ b/professional-portfolio/src/components/styles/Header.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 50%;
+  width: 100%;
   padding: 10px;
   text-shadow: 0 0 10px var(--accent), 0 0 15px var(--accent), 0 0 30px;
   z-index: 1;
@@ -23,7 +23,7 @@
 
 .navBar {
   z-index: 1;
-  width: 50%;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   padding: 10px;
@@ -39,7 +39,9 @@
   font-size: 3vw;
 }
 
-.navBtn:hover {
+.navBtn:hover,
+.navBtn:focus,
+.navBtn:active {
   color: var(--accent);
   box-shadow: 0 0 10px var(--light1);
 }
