--- a/professional-portfolio/src/utils/colors.css
+++ b/professional-portfolio/src/utils/colors.css
@@ -1,6 +1,6 @@
 :root {
-  /* --accent: #3c6e71; */
   --accent: #5b1480;
+  --success: #3c6e71;
   --warning: #e14c80;
   --dark3: #212529;
   --dark2: #343a40;
